test_suite/tests/ui/conflict/flatten-tuple-struct.rs
#[macro_use]
extern crate serde_derive;

#[derive(Serialize)]
struct Foo(u32, #[serde(flatten)] HashMap<String, String>);

fn main() {}
